--- a/Touch/Base.lproj/Main.storyboard
+++ b/Touch/Base.lproj/Main.storyboard
@@ -1015,13 +1015,29 @@
                                     <constraint firstItem="2rY-L8-NtJ" firstAttribute="bottom" secondItem="fAH-bP-Bc1" secondAttribute="bottom" constant="-5" id="v4m-JE-2B9"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="94m-Jf-Q9Y" userLabel="New Game">
+                                <rect key="frame" x="16" y="508" width="288" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="lRo-bs-PWI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
+                                <state key="normal" title="New Game">
+                                    <color key="titleColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="newGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zOq-Ti-RpG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.80000000000000004" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="fAH-bP-Bc1" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="D4h-Mm-RLj"/>
+                            <constraint firstItem="94m-Jf-Q9Y" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" constant="-30" id="Dgq-4J-gy5"/>
                             <constraint firstItem="kQl-K3-BHs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Gjl-Hs-qra"/>
                             <constraint firstItem="kQl-K3-BHs" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Kah-xi-q6b"/>
                             <constraint firstItem="fAH-bP-Bc1" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" constant="-100" id="SNH-NN-Z0G"/>
+                            <constraint firstItem="94m-Jf-Q9Y" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="aam-oi-gmI"/>
+                            <constraint firstItem="94m-Jf-Q9Y" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bRZ-Sm-4KS"/>
                             <constraint firstItem="fAH-bP-Bc1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="e5M-XK-jtR"/>
                             <constraint firstItem="kQl-K3-BHs" firstAttribute="bottom" secondItem="0pr-w0-iLe" secondAttribute="top" constant="-5" id="meB-Ka-6DM"/>
                             <constraint firstItem="0pr-w0-iLe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="sGw-n2-fwx"/>
