Moved presentation logic to game view class .

--- a/Touch/Base.lproj/Main.storyboard
+++ b/Touch/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="GameView" customModule="Touch" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -1045,18 +1045,18 @@
                             <constraint firstItem="0pr-w0-iLe" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="xOH-E4-dNF"/>
                             <constraint firstItem="kQl-K3-BHs" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="yED-b7-mbS"/>
                         </constraints>
+                        <connections>
+                            <outlet property="indicatorA" destination="4sa-PH-m8k" id="qo2-Av-NaT"/>
+                            <outlet property="indicatorB" destination="zXR-0O-lEb" id="50z-Qy-GIM"/>
+                            <outlet property="labelScoreA" destination="32s-pU-LtS" id="ubi-sW-uYB"/>
+                            <outlet property="labelScoreB" destination="J3B-Ru-4wQ" id="EZA-Ph-atu"/>
+                        </connections>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
-                    <connections>
-                        <outlet property="indicatorA" destination="4sa-PH-m8k" id="WkG-Ig-tu7"/>
-                        <outlet property="indicatorB" destination="zXR-0O-lEb" id="psi-r5-ath"/>
-                        <outlet property="labelScoreA" destination="32s-pU-LtS" id="t60-T8-6sd"/>
-                        <outlet property="labelScoreB" destination="J3B-Ru-4wQ" id="rJu-UI-cda"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="114.375" y="120.4225352112676"/>
+            <point key="canvasLocation" x="390" y="100"/>
         </scene>
     </scenes>
 </document>
