--- a/Touch/Base.lproj/Main.storyboard
+++ b/Touch/Base.lproj/Main.storyboard
@@ -1055,10 +1055,71 @@
                         </connections>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <segue destination="7Js-eY-hFx" kind="presentation" identifier="modalAlertSegue" id="dUg-WA-cXi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="390" y="100"/>
+        </scene>
+        <!--Alert View Controller-->
+        <scene sceneID="Gid-ma-Wxr">
+            <objects>
+                <viewController modalPresentationStyle="overCurrentContext" id="7Js-eY-hFx" customClass="AlertViewController" customModule="Touch" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I5U-Pn-RqY"/>
+                        <viewControllerLayoutGuide type="bottom" id="SXZ-rr-hwf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ksx-UI-Wz7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ka-VR-vN4">
+                                <rect key="frame" x="40" y="194" width="240" height="180"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ISp-FF-Bbs">
+                                        <rect key="frame" x="46" y="142" width="148" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.80000000000000004" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="OK">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="okButtonPressed:" destination="7Js-eY-hFx" eventType="touchUpInside" id="VJC-2S-Mgb"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Message" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x94-l5-AgE">
+                                        <rect key="frame" x="8" y="8" width="224" height="126"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.80000000000000004" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.3532273769" green="0.18581508099999999" blue="0.37057596450000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="2c0-Gb-dVm"/>
+                                    <constraint firstAttribute="height" constant="180" id="DdK-q7-qRe" userLabel="height = 180"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="3ka-VR-vN4" firstAttribute="centerX" secondItem="ksx-UI-Wz7" secondAttribute="centerX" id="JlS-TT-MPA"/>
+                            <constraint firstItem="3ka-VR-vN4" firstAttribute="centerY" secondItem="ksx-UI-Wz7" secondAttribute="centerY" id="pYW-kI-uvN"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="alertView" destination="3ka-VR-vN4" id="1ek-Cj-S4q"/>
+                        <outlet property="labelMessage" destination="x94-l5-AgE" id="vru-wx-HTg"/>
+                        <outlet property="okButton" destination="ISp-FF-Bbs" id="2GU-Ui-4jw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tkd-mk-lDi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1201.875" y="98.239436619718305"/>
         </scene>
     </scenes>
 </document>
